syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/adarshsrinivasan/PressAndPlay/libraries/proto";

// Interface exported by the server.
service Events {
  // GetEvents - takes EventModel with only managerId populated as input and returns list of EventModel
  rpc GetEventsByUserIdAndCourtId(EventModel) returns (EventResponse) {}
}

message EventResponse {
  repeated EventModel eventModelList = 1;
}

message EventModel {
  string id = 1;
  string userId = 2;
  string managerId = 3;
  string courtId = 4;
  string slotId = 5;
  google.protobuf.Timestamp bookingTimestamp = 6;
  int32 timeStartHHMM = 7;
  int32 timeEndHHMM = 8;
  bool notified = 9;
}